--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
     </div>
     <script></script>
     <footer>
-      <p>&copy; 2023 Dildos for Colin. All rights reserved.</p>
+      <p>
+        &copy; 2025 Dildos for Colin. All rights reserved. Power to the Booty
+      </p>
     </footer>
   </body>
 </html>
