footer wasn't displaying properly

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
     </div>
     <script></script>
-    <footer>
+    <footer id="footer">
       <p>
         &copy; 2025 Dildos for Colin. All rights reserved. Power to the Booty
       </p>
