Fixed broken link

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div id="dealList">
         <div class="deal-Item">
           <a
-            href="https://www.mshop.se/inflate-in-me-dildo?itm_source=category-page&itm_category=172"
+            href="https://www.vuxen.se/campaigns?v_promotion_names=2+FÖR+250"
             target="_blank"
           >
             <h4>Pick two of any items in this list for 250kr</h4>
