--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Colins Dildo List</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="kiss.ico" type="image/x-icon" />
   </head>
   <body>
     <h2 id="mainTitle">Dildos for Colin</h2>
