Updated to categories

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colins Dildo List</title>
+    <title>Colins Toy List</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="kiss.ico" type="image/x-icon" />
   </head>
   <body>
-    <h2 id="mainTitle">Dildos for Colin</h2>
+    <h2 id="mainTitle">Toys for Colin</h2>
 
     <p class="intro-text">
-      Welcome to the Dildos for Colin page! Here you can find a variety of
-      dildos that are perfect for Colin.
+      Welcome to "Toys for Colin"! This is a curated list of toys and products
+      that I think Colin would enjoy. The list is updated regularly, so check
+      back often for new additions. If you have any suggestions or want to add
+      something, feel free to let me know!
     </p>
     <div id="loadingMessage">Loading products...</div>
 
