Updated to React

--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colins Toy List</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="kiss.ico" type="image/x-icon" />
+    <title>Vite + React</title>
   </head>
   <body>
-    <h2 id="mainTitle">Toys for Colin</h2>
-
-    <p class="intro-text">
-      Welcome to "Toys for Colin"! This is a curated list of toys and products
-      that I think Colin would enjoy. The list is updated regularly, so check
-      back often for new additions. If you have any suggestions or want to add
-      something, feel free to let me know!
-    </p>
-    <div id="loadingMessage">Loading products...</div>
-
-    <div id="dildosContainer"></div>
-    <script></script>
-    <footer id="footer">
-      <p>
-        &copy; 2025 Dildos for Colin. All rights reserved. Power to the Booty
-      </p>
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
